# typely

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TRADEMARKS.md  Typely-Account-Release-Fix-Manifest.txt  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: checks.yml  release.yml
cloudflare/typely-api/: .dev.vars.example  package-lock.json  package.json  setup.ps1  wrangler.jsonc
cloudflare/typely-api/migrations/: 0001_auth.sql
cloudflare/typely-api/src/: index.js
scripts/: check-account-server.ps1  publish-release.ps1  republish-v0.4.0.ps1
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src/api/: authClient.test.ts  authClient.ts
src/app/: App.tsx  AppContext.tsx  AppProvider.tsx  AppRouter.tsx  AppShell.tsx  PressFeedback.tsx  ScreenRouter.tsx  app.types.ts
src/audio/: audioEngine.ts  audioManifest.ts  soundTones.ts
src/components/feedback/: PressFeedback.tsx
src/hooks/: useAnimatedNumber.ts
src/lib/: format.ts  useLocalStorage.ts
src/storage/: appData.test.ts  appData.ts  appSettings.test.ts  appSettings.ts  playerProfile.ts  resultHistory.test.ts  resultHistory.ts  useLocalStorage.ts
src/styles/: auth.css  base.css  history.css  index.css  insights.css  interactions.css  motion.css  overlays.css  performance.css  phase2.css  practice.css  profile.css  replay.css  results.css  screens.css  tokens.css  update.css
src/utils/: format.ts  motion.ts
(+97 files in other folders)
