[package]
name = "typely"
version = "0.1.0"
description = "A focused desktop typing trainer"
authors = ["meshahid973"]
edition = "2021"

[lib]
name = "typely_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
